--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 title: Shishir's Personal Portfolio
 description: Cool Projects I've worked on
